src/snapshots/lumina_typesystem__tests__inst_from_method_infer_self.snap
---
source: lumina-typesystem/src/tests.rs
expression: "inst.method.to_foreign(tenv, Generics::new())"
---
∀a is From int. (int -> a)
