src/snapshots/lumina_typesystem__tests__inst_functor.snap
---
source: lumina-typesystem/src/tests.rs
expression: "inst.typing.to_foreign(&tenv, Generics::new())"
---
((option int) -> int)
