src/snapshots/lumina_typesystem__tests__inst_generics.snap
---
source: lumina-typesystem/src/tests.rs
expression: "{ let f = func!(forall a, b.(a, b => a)); inst!(f int float) }"
---
(int, float -> int)
