src/snapshots/lumina_typesystem__tests__inst_intable_for_int.snap
---
source: lumina-typesystem/src/tests.rs
expression: "{ let f = func!(forall a [\"Intable\"], b.(a, b => a)); inst!(f int float) }"
---
(int, float -> int)
