src/snapshots/lumina_typesystem__tests__inst_into_float_for_int.snap
---
source: lumina-typesystem/src/tests.rs
expression: "{ let f = func!(forall a [\"Into\" float].(a => float)); inst!(f int) }"
---
(int -> float)
