src/snapshots/lumina_typesystem__tests__inst_into_method-2.snap
---
source: lumina-typesystem/src/tests.rs
expression: "minst.method.to_foreign(tenv, Generics::new())"
---
∀a is From float. (float -> a)
