src/snapshots/lumina_typesystem__tests__inst_product_field.snap
---
source: lumina-typesystem/src/tests.rs
expression: "format!(\"{}\\n{}\", inst.to_type(()), tenv)"
---
(point 'a)
[32mwith tenv[39m
  'a [35m->[39m int
