src/snapshots/lumina_typesystem__tests__inst_recursive_query.snap
---
source: lumina-typesystem/src/tests.rs
expression: "{ let f = func!(forall a [\"From\" a].(a => a)); inst!(f int) }"
---
(int -> int)
